--- a/style.css
+++ b/style.css
@@ -8,9 +8,44 @@
     border: 2px solid red;
     display: grid;
     grid-template: repeat(4, minmax(100px, 1fr))/repeat(4, 1fr);
+    grid-auto-flow: dense;
 }
 
 .box {
     border: 2px solid blue;
     text-align: center;
+}
+
+.two {
+    background-color: blue;
+    grid-column: span 2;
+}
+
+.six {
+    background-color: green;
+    grid-column: span 2;
+}
+
+.eight {
+    grid-column: 3;
+}
+
+.nine {
+    background-color: orange;
+    grid-column: 2;
+    grid-row: span 2;
+}
+
+.ten {
+    background-color: purple;
+    grid-row: span 2;
+    grid-column: -2;
+}
+
+.eleven {
+    grid-column: 1;
+}
+
+.twelve {
+    grid-column: 3;
 }
